--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "Lotti Karotti Karten-App",
   "short_name": "Lotti Karotti",
   "description": "Kartenzieh-App für das Brettspiel Lotti Karotti",
-  "start_url": "/",
+  "start_url": "./",
   "display": "standalone",
   "background_color": "#667eea",
   "theme_color": "#667eea",
